Fixed spacing and added functionality to nav bar

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@ $red: #ee6e73;
 $yellow: #ffd789;
 $pink: #febad2;
 $main-font: "Open Sans", Helvetica, sans-serif;
-$x-small-font: 10px;
+$x-small-font: 5px;
 $small-font: 14px;
 $medium-font: 18px;
 $large-font: 25px;
@@ -118,7 +118,7 @@ p {
 // basic header styles
 
 header {
-    height: 100px;
+    height: 90px;
     width: 100%;
     position: fixed;
     text-align: left;
@@ -138,7 +138,7 @@ header {
         margin: 0; // replace with %styled-list
         padding: 0; // replace with %styled-list
         position: absolute;
-        top: 100px; // if nav sliding in below header
+        top: 90px; // if nav sliding in below header
         width: 100%;
         height: 100vh;
 
@@ -197,6 +197,7 @@ header {
 
 #intro-div {
     height: 80vh;
+    padding-bottom: $medium-space;
 
     img {
         width: 200px;
@@ -288,7 +289,7 @@ header {
         padding: $medium-space $large-space;
         background: $pink;
         border-radius: 15px;
-        margin-bottom: $large-space;
+        margin-bottom: 0;
     }
     @media only screen and (max-width: 1000px) {
         #challenge-div {
@@ -300,10 +301,16 @@ header {
             }
         }
     }
+
+    #dohad-div {
+        h2 {
+            text-transform: none;
+        }
+    }
 }
 
 #investigate-div {
-    padding-top: 0;
+    padding-top: $large-space;
 
     #research-div {
         text-align: left;
@@ -347,6 +354,7 @@ header {
 
 #participate-div {
     text-align: left;
+    padding-top: $large-space;
 
     h3 {
         margin-bottom: 0;
@@ -386,6 +394,10 @@ header {
     #participate-div {
         text-align: center;
 
+        h3 {
+            padding-bottom: $medium-space;
+        }
+
         .research-section {
             .research-text {
                 width: $small-width;
@@ -399,12 +411,31 @@ header {
     }
 }
 
-#support-sub {
-    padding: 0 0 $large-space;
+#support-div {
+    padding-top: $large-space;
+
+    #support-sub {
+        padding: 0 0 $large-space;
+    }
 }
 
 #contact-div {
     background: $dark-gray;
+
+    #contact-copyright {
+      margin-bottom: $medium-space;
+
+        #copyright-text {
+          font-size: $small-font;
+        }
+        #copyright-yaleohh {
+            color: $pink;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+    }
 
     h1 {
         color: white;
@@ -424,25 +455,32 @@ header {
 
     img {
         width: 20px;
+        height: 15px;
     }
 
     #contact-main-div {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        align-items: center;
         margin: $medium-space;
 
         a {
-            margin: 0 $small-space;
+            margin-bottom: $small-space;
         }
-    }
-    @media only screen and (max-width: 1000px) {
-        #contact-main-div {
-            flex-direction: column;
+
+        img {
+            margin-bottom: $small-space;
         }
     }
 
     .references-section {
         text-align: left;
+
+        p {
+            font-size: $x-small-font;
+            letter-spacing: 1px;
+            font-weight: 100;
+        }
 
         #references-text {
             text-align: left;
